<resources>
    <string name="app_name">Gestor Tickets</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_users">Usuarios</string>
    <string name="menu_add_user">Nuevo usuario</string>
    <string name="menu_tickets_admin">Tickets</string>
    <string name="menu_tickets_tecnico">Mis Tickets</string>
    <string name="menu_tickets_trabajador">Mis Tickets</string>
    <string name="menu_tickets_pendientes">Tickets Pendientes</string>
    <string name="menu_add_ticket">Nuevo ticket</string>
</resources>